[package]
name = "wtweb"
version = "0.1.0"
authors = ["Nikita Belov <wtedst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
flexi_logger = { version = "0.18", features = ["async", "specfile", "compress"] }
rustls = { version = "0.18", features = ["logging"] }
actix-web = { version = "3", features = ["rustls"] }
actix-files = "0.3"
toml = "0.5"
handlebars = "4.0.1"
serde = "1.0.126"
pulldown-cmark = "0.8.0"
serde_json = "1.0.66"
syntect = "4.6.0"
