[package]
name = "wtweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
futures = "0.3.24"
futures-util = "0.3.24"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.4", features = ["full"] }
