[package]
name = "wtweb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.15"
bytes = "1.2.1"
crossterm = "0.25.0"
futures = "0.3.24"
futures-util = "0.3.24"
handlebars = { version = "4.3.4", features = ["dir_source"] }
mime = "0.3.16"
pulldown-cmark = { path = "pulldown-cmark", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.4", features = ["full"] }
toml = "0.7.3"
tui = "0.19.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
